	  re-initialize the console UART as needed to enable DMA on the
	  console UART (contributed by Mike Smith).
	* net/recvfrom.c, net/Kconfig, include/nuttx/net/uipopt.h: Remove delay
	  after receiving data.  That has historical reasons to be there (it
	  was needed before read-ahead buffering was added), but kills performance.
	  (Noted by Max Holtzberg).
	* configs/shenzhou:  Add beginnings of a board configuration for the
	  Shenzhou STM32107 board (see www.armjishu.com).  Very little is in
	  place as of this initial check-in.
	* QEMU: Fixes from Richard Cochran to build QEMU with Kconfig files.
	* arch/*/src/Makefile:  Remove some old logic that was kicked off
	  when CONFIG_BOOT_RUNFROMFLASH=y.  The old logic used to use
	  objcopy to move sections.  Newer logic changes the load position
	  of sections in the the linker script.  As far as I can tell, there
	  is nothing in the source tree now that depends on the old way of
	  doing things (if I am wrong, they will need a change to the linker
	  script).
	* configs/fire-stm32v2:  Configuration for the M3 Wildfire board.  I
	  don't know very much about this board other than is has an
	  STM32F103VET6 chip, LCD, touchscreen, and ENC28J60 network.  Very
	  little is in place on the initial check-in.
	* configs/shenzhou: Coding for the Shenzhou board port is complete,
	  but tested has been deferred until I get the right tools.
	* arch/arc/include/stm32/chip.h and arch/arm/src/stm32/chip.h:
	  Add support for the STM32F103VET6.
	* fs/fs_fdopen.c: Bad check for failure to allocate memory.  (Noted
	  by Ronen Vainish).
	* drivers/mmcsd/mmcsd_sdio.c: If the MMC/SD driver were ever
	  uninitialized then there would be a double release of memory
	  (Noted by Ronen Vainish).
	* fs/mmap/fs_rammap.c:  Fix logic error and errno check (contributed
	  by Kate).
	* arch/avr/src: Fixes from AVR32 build errors that have crept in
	  over the time; incorporated Kconfig for AVR3 (Richard Cochran).
